# ProbePy

./: .coverage  .env  .gitignore  LICENSE  README.md  build-app.ipynb  coverage.xml  design-probes.ipynb  dev.py  pyproject.toml
docs/: gene_screening_tutorial.ipynb  prep_tutorial.ipynb  probe_design_tutorial.ipynb
src/hcrfish/: __init__.py  _version.py
src/hcrfish/blast/: __init__.py  config.py  install.py  install_ncbi_tools.py  utils.py
src/hcrfish/hcr/: __init__.py  prep.py  utils.py
src/hcrfish/plotting/: __init__.py  utils.py
src/hcrfish/transcriptomics/: __init__.py  classes.py  main.py  update.py  utils.py
src/probepy/: __init__.py
src/probepy/blast/: __init__.py  install.py  utils.py
src/probepy/hcr/: __init__.py  prep.py  utils.py
src/probepy/transcriptomics/: __init__.py  classes.py  main.py  update.py  utils.py
tests/: __init__.py  conftest.py  test_blast.py  test_blast_install.py  test_hcr.py  test_hcr_utils.py  test_integration.py  test_plotting.py  test_prep.py  test_transcriptomics.py  test_transcriptomics_main.py  test_transcriptomics_update.py  test_transcriptomics_utils.py
