[tool.poetry]
name = "hcrfish"
version = "0.1.0"
description = "HCR-FISH probe design toolkit for transcriptomics research"
authors = ["Giacomo Glotzer <gglotzer@rockefeller.edu>"]
maintainers = ["Giacomo Glotzer <gglotzer@rockefeller.edu>"]
readme = "README.md"
homepage = "https://github.com/your-username/hcr_probe_design_general"
repository = "https://github.com/your-username/hcr_probe_design_general"
documentation = "https://github.com/your-username/hcr_probe_design_general/blob/main/README.md"
keywords = ["hcr-fish", "probe-design", "transcriptomics", "bioinformatics", "molecular-biology"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
packages = [{include = "hcrfish", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
matplotlib = "^3.10.7"
numpy = "^2.3.4"
pandas = "^2.3.3"
pygenomeviz = "^1.6.1"
biopython = "^1.85"
tqdm = "^4.67.1"
openpyxl = "^3.1.5"
lazy-loader = "^0.4"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
pytest-cov = "^5.0.0"
pytest-mock = "^3.12.0"
black = "^24.0.0"
isort = "^5.13.0"
flake8 = "^7.0.0"
mypy = "^1.8.0"
pre-commit = "^3.6.0"

[tool.poetry.group.notebook.dependencies]
ipykernel = "^7.0.1"
ipython = "^9.6.0"
jupyter = "^1.0.0"

[tool.poetry.group.docs.dependencies]
sphinx = "^7.2.0"
sphinx-rtd-theme = "^2.0.0"
myst-parser = "^2.0.0"

[tool.poetry.scripts]
hcrfish-check-blast = "hcrfish.blast.blast_utils:check_blast_tools"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=hcrfish",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "def __str__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88
src_paths = ["src", "tests"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true
show_column_numbers = true

[[tool.mypy.overrides]]
module = [
    "pygenomeviz.*",
    "Bio.*",
    "tqdm.*",
]
ignore_missing_imports = true
