[tool.poetry]
name = "probepy"
version = "0.1.0"
description = "FISH probe design toolkit for transcriptomics research"
authors = ["Giacomo Glotzer <gglotzer@rockefeller.edu>"]
maintainers = ["Giacomo Glotzer <gglotzer@rockefeller.edu>"]
readme = "README.md"
homepage = "https://github.com/Social-Evolution-and-Behavior/ProbePy"
repository = "https://github.com/Social-Evolution-and-Behavior/ProbePy"
documentation = "https://github.com/Social-Evolution-and-Behavior/ProbePy/README.md"
keywords = ["hcr-fish", "probe-design", "transcriptomics", "bioinformatics", "molecular-biology"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
packages = [{include = "probepy", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
matplotlib = "^3.10.7"
numpy = "^2.3.4"
pandas = "^2.3.3"
pygenomeviz = "^1.6.1"
biopython = "^1.85"
tqdm = "^4.67.1"
openpyxl = "^3.1.5"
lazy-loader = "^0.4"
mkinit = "^1.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
pytest-mock = "^3.12.0"
black = "^24.0.0"
isort = "^5.13.0"
flake8 = "^7.0.0"
mypy = "^1.8.0"
pre-commit = "^3.6.0"
mkinit = "^1.1.0"

[tool.poetry.group.notebook.dependencies]
ipykernel = "^7.0.1"
ipython = "^9.6.0"
jupyter = "^1.0.0"

[tool.poetry.group.docs.dependencies]
sphinx = "^7.2.0"
sphinx-rtd-theme = "^2.0.0"
myst-parser = "^2.0.0"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"